--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://8d726eb9-4ab8-4295-b2a3-363ccf62cf2d.preview.emergentagent.com
 WDS_SOCKET_PORT=443
